fix: support span />

--- a/app/views/support/bootloaderZumBT328.html
+++ b/app/views/support/bootloaderZumBT328.html
@@ -73,42 +73,42 @@
                     <tr>
                         <td class="support--text-right">Pin 10</td>
                         <td style="padding: 0px 5px 0px 5px;">
-                            <span class="icon--arrow-right" />
+                            <span class="icon--arrow-right"></span>
                         </td>
                         <td>RESET</td>
                     </tr>
                     <tr>
                         <td class="support--text-right">Pin 11</td>
                         <td style="padding: 0px 5px 0px 5px;">
-                            <span class="icon--arrow-right" />
+                            <span class="icon--arrow-right"></span>
                         </td>
                         <td>Pin 11</td>
                     </tr>
                     <tr>
                         <td class="support--text-right">Pin 12</td>
                         <td style="padding: 0px 5px 0px 5px;">
-                            <span class="icon--arrow-right" />
+                            <span class="icon--arrow-right"></span>
                         </td>
                         <td>Pin 12</td>
                     </tr>
                     <tr>
                         <td class="support--text-right">Pin 13</td>
                         <td style="padding: 0px 5px 0px 5px;">
-                            <span class="icon--arrow-right" />
+                            <span class="icon--arrow-right"></span>
                         </td>
                         <td>Pin 13</td>
                     </tr>
                     <tr>
                         <td class="support--text-right">5V</td>
                         <td style="padding: 0px 5px 0px 5px;">
-                            <span class="icon--arrow-right" />
+                            <span class="icon--arrow-right"></span>
                         </td>
                         <td>5V</td>
                     </tr>
                     <tr>
                         <td class="support--text-right">GND</td>
                         <td style="padding: 0px 5px 0px 5px;">
-                            <span class="icon--arrow-right" />
+                            <span class="icon--arrow-right"></span>
                         </td>
                         <td>GND</td>
                     </tr>
