--- a/app/views/support/support.html
+++ b/app/views/support/support.html
@@ -12,8 +12,8 @@
         <div class="support--block">
             <div class="support--content">
                 <h1 class="h2 header__title support--centered">{{ card.title }}</h1>
-                <span class="support--card--data" data-ng-if="card.data && !card.extData" data-ng-bind-html="card.data" />
-                <span class="support--card--data" data-ng-if="card.extData" data-ng-include="'views/support/'+ card.extData" />
+                <span class="support--card--data" data-ng-if="card.data && !card.extData" data-ng-bind-html="card.data"></span>
+                <span class="support--card--data" data-ng-if="card.extData" data-ng-include="'views/support/'+ card.extData"></span>
                 <div class="support--next" data-ng-if="card.next.length <= 3">
                     <span class="support--next-child" data-ng-repeat="child in card.next">
                         <button class="btn" data-ng-class="child.class" data-ng-click="go(child._id)" data-element="support_next_child-{{child._id}}">
