add: iceland font

--- a/app/styles/_variables.scss
+++ b/app/styles/_variables.scss
@@ -11,6 +11,11 @@
        url('../styles/fonts/roboto/roboto.svg#svgFontName') format('svg'); /* Legacy iOS */
 }
 
+@font-face {
+  font-family: 'Iceland';
+  src: url('../styles/fonts/iceland/Iceland-Regular.ttf');
+}
+
 /*
  * Legal Disclaimer
  *
