added parameters in grunt instead of options, fix html syntax to adapt it to uglify

--- a/app/views/support/contactForm.html
+++ b/app/views/support/contactForm.html
@@ -1,22 +1,30 @@
 <div class="support--form" data-ng-if="common.user">
-    <p>Para poder proporcionarle un soporte mas personalizado, <strong>necesitamos que se ponga en contacto</strong> con nuestros técnicos rellenando el siguiente formulario.</p>
+    <p>Para poder proporcionarle un soporte mas personalizado,
+        <strong>necesitamos que se ponga en contacto</strong> con nuestros técnicos rellenando el siguiente formulario.</p>
     <form name="form">
         <fieldset>
             <!-- Message -->
             <div class="form-control">
                 <legend class="icon--check">Explique detalladamente su problema.</legend>
                 <span class="form--input  common--textarea" data-ng-class="{'input--focused':focus === 'message'}">
-                    <textarea ng-model="response.message" rows="5" class="msd-elastic" ng-model="response.message" placeholder="{{ 'modal-inform-error-textarea-placeholder' | translate }}" data-ng-focus="focus = 'message'" data-ng-blur="focus = false" data-element="modal-send-comments-textarea-placeholder" />
+                    <textarea ng-model="response.message" rows="5" class="msd-elastic" ng-model="response.message" placeholder="{{ 'modal-inform-error-textarea-placeholder' | translate }}"
+                        data-ng-focus="focus = 'message'" data-ng-blur="focus = false" data-element="modal-send-comments-textarea-placeholder"></textarea>
                 </span>
             </div>
         </fieldset>
     </form>
     <div class="form-control submit support--next">
-        <input type="submit" data-ng-disabled="!response.message" data-ng-click="send()" name="submitform" class="btn btn--primary btn__login--submit" value="{{'send' | translate}}">
+        <input type="submit" data-ng-disabled="!response.message" data-ng-click="send()" name="submitform" class="btn btn--primary btn__login--submit"
+            value="{{'send' | translate}}">
     </div>
 </div>
 
-<div class="support--form" data-ng-if="!common.user">
-    <p>Para poder proporcionarle un soporte mas personalizado, <strong>necesitamos que se ponga en contacto</strong> con nuestros técnicos enviando un mail a <a href="mailto:soporte.bitbloq@bq.com" target="_blank" class="icon--url">soporte.bitbloq@bq.com</a></p>
-    <p class="icon--check"><strong>Recuerde explicar detalladamente su consulta.</strong></p>
+<div class="support--form" data-ng-show="!common.user">
+    <p>Para poder proporcionarle un soporte mas personalizado,
+        <strong>necesitamos que se ponga en contacto</strong> con nuestros técnicos enviando un mail a
+        <a href="mailto:soporte.bitbloq@bq.com" target="_blank" class="icon--url">soporte.bitbloq@bq.com</a>
+    </p>
+    <p class="icon--check">
+        <strong>Recuerde explicar detalladamente su consulta.</strong>
+    </p>
 </div>
