--- a/app/views/loginForm.html
+++ b/app/views/loginForm.html
@@ -4,13 +4,13 @@
         <span class="form--subtitle">{{ 'login-profiles' | translate }}</span>
 
         <div class="social--buttons__container">
-            <ul class="row row--collapse">
+            <ul class="row">
                 <li class="social--button__container">
                     <button class="btn btn--social btn__login--facebook" ng-click="authenticate('facebook')">
                         {{ 'facebook' | translate }}
                     </button>
                 </li>
-                <li class="social--button__container">
+                <li  id="authorize-button" class="social--button__container">
                     <button id="authorize-button" class="btn btn--social btn__login--google" ng-click="authenticate('google')">
                         {{ 'google+' | translate }}
                     </button>
