--- a/app/views/support/old_compileOtherForm.html
+++ b/app/views/support/old_compileOtherForm.html
@@ -19,7 +19,7 @@
         </fieldset>
     </form>
     <div class="form-control submit support--next">
-        <input type="submit" data-ng-disabled="!response.code || !response.error" data-ng-click="send()" name="submitform" class="btn btn--primary btn__login--submit" value="{{'send' | translate}}">
+        <input type="submit" data-ng-disabled="sendIsBlocked || !response.code || !response.error" data-ng-click="send()" name="submitform" class="btn btn--primary btn__login--submit" value="{{'send' | translate}}">
     </div>
 </div>
 
