--- a/app/views/support/w2bCrashForm.html
+++ b/app/views/support/w2bCrashForm.html
@@ -30,7 +30,7 @@
         </fieldset>
     </form>
     <div class="form-control submit support--next">
-        <input type="submit" data-ng-disabled="!response.system || !response.linklog || !response.w2blog" data-ng-click="send()" name="submitform" class="btn btn--primary btn__login--submit" value="{{'send' | translate}}">
+        <input type="submit" data-ng-disabled="sendIsBlocked || !response.system || !response.linklog || !response.w2blog" data-ng-click="send()" name="submitform" class="btn btn--primary btn__login--submit" value="{{'send' | translate}}">
     </div>
 </div>
 
