fix: i18n controller + many little fixes

--- a/app/views/support/hardLCDs.html
+++ b/app/views/support/hardLCDs.html
@@ -12,4 +12,4 @@
         </figure>
     </div>
 </div>
-<p><strong>¿Ha solucionado su consulta?</strong></p>
+<p class="support--centered"><strong>¿Ha solucionado su consulta?</strong></p>
