--- a/app/views/support/old_compileOtherForm.html
+++ b/app/views/support/old_compileOtherForm.html
@@ -6,14 +6,14 @@
             <div class="form-control">
                 <legend class="icon--check">Añada el código del programa</legend>
                 <span class="form--input common--textarea" data-ng-class="{'input--focused':focus === 'code'}">
-                    <textarea ng-model="response.code" rows="5" class="msd-elastic" ng-model="response.code" placeholder="{{ 'modal-inform-code-textarea-placeholder' | translate }}" data-ng-focus="focus = 'code'" data-ng-blur="focus = false" data-element="modal-inform-code-textarea-placeholder" style="overflow: auto;" />
+                    <textarea ng-model="response.code" rows="5" class="msd-elastic" ng-model="response.code" placeholder="web2boardLink.log" data-ng-focus="focus = 'code'" data-ng-blur="focus = false" data-element="web2boardLink.log" style="overflow: auto;" />
                 </span>
             </div>
             <!-- error -->
             <div class="form-control">
                 <legend class="icon--check">Añada el mensaje de error que recibe</legend>
                 <span class="form--input common--textarea" data-ng-class="{'input--focused':focus === 'error'}">
-                    <textarea ng-model="response.error" rows="5" class="msd-elastic" ng-model="response.error" placeholder="{{ 'modal-inform-error-textarea-placeholder' | translate }}" data-ng-focus="focus = 'error'" data-ng-blur="focus = false" data-element="modal-inform-error-textarea-placeholder" style="overflow: auto;" />
+                    <textarea ng-model="response.error" rows="5" class="msd-elastic" ng-model="response.error" placeholder="info.log" data-ng-focus="focus = 'error'" data-ng-blur="focus = false" data-element="info.log" style="overflow: auto;" />
                 </span>
             </div>
         </fieldset>
