--- a/app/views/support/compileASCIIdecode.html
+++ b/app/views/support/compileASCIIdecode.html
@@ -1,18 +1,28 @@
 <p>
-    <strong>¿Recibe un mensaje parecido al siguiente ejemplo?</strong>
+    <strong>{{'support-view--compileASCIIdecode-title' | translate}}</strong>
     <ul>
-      <li class="common--text-term-fx">ascii codec can't decode byte 0xe1 in position 13: ordinal not in range(128)</li>
+      <li class="common--text-term-fx">
+        ascii codec can't decode byte 0xe1 in position 13: ordinal not in range(128)
+      </li>
     </ul>
 </p>
-<p>Este tipo de errores suelen estar relacionados con el nombre del usuario cuando este incluye un caracter poco frecuente tipo <i class="common--icon-keycap-fx">º</i> o <i class="common--icon-keycap-fx">ª</i></p>
-<p>Intente compilar su código con otra cuenta cuyo nombre de usuario sea <i>"mas sencillo"</i>, o
-    <strong>active la compilación online</strong>:
+<p>
+  {{'support-view--compileASCIIdecode-content1' | translate}}
+  <i class="common--icon-keycap-fx">º</i>, <i class="common--icon-keycap-fx">ª</i>...
+</p>
+<p>{{'support-view--compileASCIIdecode-content2' | translate}}
     <ul>
         <li class="">
             <span class="switch--chromeApp input input--checkbox">
                 <input type="checkbox" id="chromeappCheckbox" name="chromeappCheckbox" value="common.user.chromeapp" data-ng-checked="common.user.chromeapp === true" data-ng-model="common.user.chromeapp" data-ng-change="switchUserChromeAppMode()" data-element="chromeapp-checkbox">
                 <label for="chromeappCheckbox">{{'account-checkbox-chromeapp' | translate}}</label>
             </span>
-            <p class="icon--exclamation"> <i class="text--secondary">Puede modificar esta opción desde el <a href="/#/account" target="_blank">{{ 'account-config' | translate }}</a></i></p>
+            <p class="icon--exclamation support--centered">
+              <i class="text--secondary">
+                {{'support-view--compileASCIIdecode-option1' | translate}}
+                "<a href="/#/account" target="_blank">{{ 'account-config' | translate }}</a>"
+              </i>
+            </p>
         </li>
+    </ul>
 </p>
