--- a/app/styles/_support.scss
+++ b/app/styles/_support.scss
@@ -137,6 +137,10 @@ $support-width: 900px;
     min-height: 100%;
     height: 100%;
 
+    .support--color-orange {
+        color: $toolbox-software-functions;
+    }
+
     .support--button--home {
         float: right;
         margin-top: -5px;
