--- a/app/views/support/hardLEDs.html
+++ b/app/views/support/hardLEDs.html
@@ -1,26 +1,22 @@
-<p>En la siguiente imagen puede observar cómo se realiza la correcta conexión de los cables, tanto a la placa como al componente.</p>
-<p>Es
-    <strong>necesario</strong> que conecte el componente
-    <strong>exactamente igual que en la imagen</strong> para que podamos lanzar un test automático.</p>
+<p>{{'support-view--common-hardContent1' | translate}}</p>
+<p>{{'support-view--common-hardContent2' | translate}}</p>
 <div class="support--center">
-  <div class="support--img-coolmodal">
-      <figure class="effect-goliath">
-          <a href ng-click="imgModal('/images/support/zum-led-comm.png')">
-              <img src="/images/support/zum-led-comm.png" alt="zum-led-comm" />
-              <figcaption>
-                  <h2>Haga
-                      <span>click</span> para ampliar
-                  </h2>
-              </figcaption>
-          </a>
-      </figure>
-  </div>
+    <div class="support--img-coolmodal">
+        <figure class="effect-goliath">
+            <a href ng-click="imgModal('/images/support/zum-led-comm.png')">
+                <img src="/images/support/zum-led-comm.png" alt="zum-led-comm" />
+                <figcaption>
+                    <h2>{{'support-view--common-hardClickImg1' | translate}} <span>click</span> {{'support-view--common-hardClickImg2' | translate}}</h2>
+                </figcaption>
+            </a>
+        </figure>
+    </div>
 </div>
 <p>
     <ul>
-        <li class="icon--exclamation support--centered"><i class="text--secondary">Asegurese de que todo está conectado tal y como le indicamos.</i></li>
+        <li class="icon--exclamation support--centered"><i class="text--secondary">{{'support-view--common-hardInfo' | translate}}</i></li>
     </ul>
 </p>
 <p class="support--center">
-    <strong>¿Ha conectado bien el componente?</strong>
+    <strong>{{'support-view--common-hardNext' | translate}}</strong>
 </p>
