--- a/app/views/modals/bigText.html
+++ b/app/views/modals/bigText.html
@@ -1,2 +1,2 @@
-    <h1 data-ng-show="translate">{{ bigText | translate }}</h1>
-    <h1 data-ng-hide="translate">{{ bigText }}</h1>
+    <h1>{{ bigText | translate }}</h1>
+
