logRoutes translated + fixes

--- a/app/views/support/logRoutes.html
+++ b/app/views/support/logRoutes.html
@@ -1,5 +1,6 @@
-<strong>web2board consta de 2 programas</strong> (<i class="text--secondary">"web2board"</i> y el launcher <i class="text--secondary">"Web2boardLink"</i>), cada cual con su propio fichero de log.
-<br> Los ficheros se encuentran en distintas rutas dependiendo del S.O.:
+<strong>{{'support-view--logRoutes-content1' | translate}}</strong> (<i class="text--secondary">"web2board"</i> {{'text-join' | translate}} <i class="text--secondary">"Web2boardLink"</i>)<br>
+{{'support-view--logRoutes-content2' | translate}}<br>
+{{'support-view--logRoutes-content3' | translate}}
 <ul>
     <li>
         <span class="icon--windows"> Windows</span>:
