fix modal scroll with scroll:boolean modalOptions

--- a/app/views/modals/modal.html
+++ b/app/views/modals/modal.html
@@ -1,4 +1,4 @@
-<section class="modal">
+<section class="modal" data-ng-class="{'modal__scroll':scroll}">
     <div class="modal__dialog">
         <div class="modal__dialog__content" ng-class="{'{{customClass}}':true}">
             <div ng-if="title" class="modal__header">
