--- a/app/styles/components/_modals.scss
+++ b/app/styles/components/_modals.scss
@@ -475,25 +475,27 @@
     }
 }
 
-// .modal__scroll {
-//   .modal {
-//     .modal__body {
-//       height: 700px;
-//       overflow-y: scroll;
-//       &::-webkit-scrollbar {
-//           width: 6px;
-//         }
-//       &::-webkit-scrollbar-thumb {
-//           background-color: $black;
-//       }
-//       &::-webkit-scrollbar-track {
-//           background-color: transparent;
-//           border-left: 1px solid $grey-light;
-//           border-bottom: 1px solid $grey-light;
-//       }
-//     }
-//   }
-// }
+.modal__scroll {
+    .modal__body {
+      height: 500px;
+      overflow-y: auto;
+      &::-webkit-scrollbar {
+          width: 6px;
+        }
+      &::-webkit-scrollbar-thumb {
+          background-color: $black;
+      }
+      &::-webkit-scrollbar-track {
+          background-color: transparent;
+          border-left: 1px solid $grey-light;
+          border-bottom: 1px solid $grey-light;
+      }
+    }
+    .modal--buttons {
+        padding-bottom: 20px;
+        padding-top: 20px;
+    }
+}
 
 .modal {
     text-align: left;
@@ -560,19 +562,6 @@
 
     .modal__body {
         padding: 30px;
-        overflow-y: auto;
-        max-height: 750px;
-        &::-webkit-scrollbar {
-            width: 6px;
-          }
-        &::-webkit-scrollbar-thumb {
-            background-color: $black;
-        }
-        &::-webkit-scrollbar-track {
-            background-color: transparent;
-            border-left: 1px solid $grey-divider;
-            border-bottom: 1px solid $grey-divider;
-        }
 
         .modal__parraph {
             margin-bottom: 17px;
@@ -595,10 +584,31 @@
         button {
             margin: 0 10px;
         }
-        padding-bottom: 20px;
-        padding-top: 20px;
+        padding-bottom: 30px;
         display: flex;
         justify-content: center;
+    }
+
+    &.modal__scroll {
+        .modal__body {
+          height: 500px;
+          overflow-y: auto;
+          &::-webkit-scrollbar {
+              width: 6px;
+            }
+          &::-webkit-scrollbar-thumb {
+              background-color: $black;
+          }
+          &::-webkit-scrollbar-track {
+              background-color: transparent;
+              border-left: 1px solid $grey-light;
+              border-bottom: 1px solid $grey-light;
+          }
+        }
+        .modal--buttons {
+            padding-bottom: 20px;
+            padding-top: 20px;
+        }
     }
 }
 
