--- a/app/views/support/linux.html
+++ b/app/views/support/linux.html
@@ -1,9 +1,18 @@
-<p>
-    <strong>No podemos dar soporte</strong> a distribuciones de <span class="icon--linux">  Linux <i>no certificadas</i><span><p>Hemos recibido reportes de usuarios bajo distribuciones no soportadas que han conseguido hacer funcionar el software, solventando las siguientes dificultades:
+<p>{{"support-view--linux-content1-a" | translate}} <span class="icon--linux">  Linux <i>{{"support-view--linux-content1-b" | translate}}</i></p>
+<p>{{"support-view--linux-content2" | translate}}
     <ul>
-        <li class="icon--check"> Pruebe activando el modo online para funcionar como <span class="icon--chrome"> ChromeApp</span>. Puede activar el modo <span class="icon--chrome"> ChromeApp</span> en el <a href="/#/account">panel de configuración de su cuenta</a>, bajo la opción:<br>
-            <i class="text--secondary">"{{"account-checkbox-chromeapp" | translate}}"</i>
+        <li class="icon--check">
+          {{"support-view--linux-info1" | translate}} <span class="icon--chrome"> ChromeApp</span>.
+          <ul>
+            <li>
+              <ul>
+                <li>
+                  <a href="/#/account">{{'account-config' | translate}}</a>: <i class="text--secondary">"{{"account-checkbox-chromeapp" | translate}}"</i>
+                </li>
+              </ul>
+            </li>
+          </ul>
         </li>
-        <li class="icon--check">Ejecute el comando de dialout: <span class="common--text-term-fx little">sudo adduser username_to_include dialout</span></li>
+        <li class="icon--check">{{"support-view--linux-dialout" | translate}} <span class="common--text-term-fx little">sudo adduser username_to_include dialout</span></li>
     </ul>
 </p>
